// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Content />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <figure
        className="is-256"
      >
        <img
          alt=""
          className="h-center"
          src="https://img-cache.cdn.gaiaonline.com/e1fb5e58fa52694b22eb9fc55ec3a8e4/https://orig11.deviantart.net/6f21/f/2016/016/2/1/text_1_by_cutenikechan-d9o7ngw.gif"
        />
        <figcaption>
          More features coming soon!
        </figcaption>
      </figure>,
      "className": "content",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <img
            alt=""
            className="h-center"
            src="https://img-cache.cdn.gaiaonline.com/e1fb5e58fa52694b22eb9fc55ec3a8e4/https://orig11.deviantart.net/6f21/f/2016/016/2/1/text_1_by_cutenikechan-d9o7ngw.gif"
          />,
          <figcaption>
            More features coming soon!
          </figcaption>,
        ],
        "className": "is-256",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "",
            "className": "h-center",
            "src": "https://img-cache.cdn.gaiaonline.com/e1fb5e58fa52694b22eb9fc55ec3a8e4/https://orig11.deviantart.net/6f21/f/2016/016/2/1/text_1_by_cutenikechan-d9o7ngw.gif",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "More features coming soon!",
          },
          "ref": null,
          "rendered": "More features coming soon!",
          "type": "figcaption",
        },
      ],
      "type": "figure",
    },
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <figure
          className="is-256"
        >
          <img
            alt=""
            className="h-center"
            src="https://img-cache.cdn.gaiaonline.com/e1fb5e58fa52694b22eb9fc55ec3a8e4/https://orig11.deviantart.net/6f21/f/2016/016/2/1/text_1_by_cutenikechan-d9o7ngw.gif"
          />
          <figcaption>
            More features coming soon!
          </figcaption>
        </figure>,
        "className": "content",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <img
              alt=""
              className="h-center"
              src="https://img-cache.cdn.gaiaonline.com/e1fb5e58fa52694b22eb9fc55ec3a8e4/https://orig11.deviantart.net/6f21/f/2016/016/2/1/text_1_by_cutenikechan-d9o7ngw.gif"
            />,
            <figcaption>
              More features coming soon!
            </figcaption>,
          ],
          "className": "is-256",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "",
              "className": "h-center",
              "src": "https://img-cache.cdn.gaiaonline.com/e1fb5e58fa52694b22eb9fc55ec3a8e4/https://orig11.deviantart.net/6f21/f/2016/016/2/1/text_1_by_cutenikechan-d9o7ngw.gif",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "More features coming soon!",
            },
            "ref": null,
            "rendered": "More features coming soon!",
            "type": "figcaption",
          },
        ],
        "type": "figure",
      },
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`profile page <Profile/> components <Avatar /> should render with profile im 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Avatar
    profile={
      Object {
        "avatar": "/my-custom-avatar.jpg",
        "name": "",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <figure
        className="is-square is-128"
      >
        <img
          alt=""
          src="/my-custom-avatar.jpg"
        />
        <figcaption>
          
        </figcaption>
      </figure>,
      "id": "avatar",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <img
            alt=""
            src="/my-custom-avatar.jpg"
          />,
          <figcaption>
            
          </figcaption>,
        ],
        "className": "is-square is-128",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "",
            "src": "/my-custom-avatar.jpg",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "",
          },
          "ref": null,
          "rendered": "",
          "type": "figcaption",
        },
      ],
      "type": "figure",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <figure
          className="is-square is-128"
        >
          <img
            alt=""
            src="/my-custom-avatar.jpg"
          />
          <figcaption>
            
          </figcaption>
        </figure>,
        "id": "avatar",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <img
              alt=""
              src="/my-custom-avatar.jpg"
            />,
            <figcaption>
              
            </figcaption>,
          ],
          "className": "is-square is-128",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "",
              "src": "/my-custom-avatar.jpg",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "",
            },
            "ref": null,
            "rendered": "",
            "type": "figcaption",
          },
        ],
        "type": "figure",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`profile page <Profile/> containers <Home /> should render 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    user={
      Object {
        "email": "tester@email.com",
        "profile": Object {
          "avatar": null,
          "name": "",
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Home
        user={
          Object {
            "email": "tester@email.com",
            "profile": Object {
              "avatar": null,
              "name": "",
            },
          }
        }
      />,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "user": Object {
          "email": "tester@email.com",
          "profile": Object {
            "avatar": null,
            "name": "",
          },
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Home
          user={
            Object {
              "email": "tester@email.com",
              "profile": Object {
                "avatar": null,
                "name": "",
              },
            }
          }
        />,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "user": Object {
            "email": "tester@email.com",
            "profile": Object {
              "avatar": null,
              "name": "",
            },
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
